code smells fix #1